--- a/index.html
+++ b/index.html
@@ -63,10 +63,6 @@
       <div class="container2">
         <div class="box">
      <img src="/Group 23.png">
-     <!-- <h3 class="head">Cinematic Virtual Reality</h3>
-     <hr class="custom-line">
-
-     <p class="para3">Let's be the best for more real and effective result and ready to explore the limitless world that we have prepared to you.</p> -->
     </div>
     <div class="group">
       <img class="group3" src="/Group 3.png">
@@ -88,6 +84,35 @@
   <div class="p-2 g-col-6"><img src="Rectangle 35.png"></div>
   <div class="p-2 g-col-6"><img src="Rectangle 36.png"></div>
 </div>
+ </div>
+ <div class="clients">
+  <h3 class="heading3">What our clients say</h3>
+  <p class="para3">See what our customer say about us. It really matters for us. How good or bad we will make it for avaluation to make EhyalLive better.</p>
+ </div>
+ <div class="reviews">
+  <div><img src="Group 25.png"></div>
+  <div><img src="Group 27.png"><p class="review">VISUALS are much better. The improvements in optics and resolution and much more than a modern console generation leap.</p></div>
+  <div><img src="Group 26.png"></div>
+ </div>
+ <div class="values">
+  <h3 class="heading4">Our company values culture</h3>
+  <p class="para4">We specialize in creating visual identities for products and branda in your company.</p>
+  <div class="stamps">
+    <div><img src="emojione_victory-hand.png"><p class="para5">Be Sincere</p></div>
+    <div><img src="Vector.png"><p class="para5">Stronger together</p></div>
+    <div><img src="Group 40.png"><p class="para5">Keep it simple</p></div>
+    <div><img src="twemoji_light-bulb.png"><p class="para5">Take intelligent risks</p></div>
+  </div>
+ </div>
+ <div class="explore">
+  <h3 class="heading5">Explore product in new way</h3>
+  <p class="para6">We specialize in creating visual identities for products and branda in your company.</p>
+  <div class="email">
+    <img class="mail" src="/Rectangle 60.png">
+    <p class="em"> Your Email</p>
+    <button class="start">Start</button>
+  </div>
+  <img class="hands" src="Group 22.png">
  </div>
       </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
